<resources>
    <string name="app_name">Casa Catalog</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="back_button">Back button</string>

    <string name="title_add_item">Add a new item</string>
    <string name="title_edit_item">Edit %1$s</string>
    <string name="title_edit_tags">Edit tags</string>
    <string name="title_profile">Your profile</string>

    <string name="item_basics_title_text">Basics</string>
    <string name="item_name_label">Item Name</string>
    <string name="item_value_label">Estimated Value</string>
    <string name="item_purchase_date_label">Purchase Date</string>
    <string name="item_description_label">Description</string>

    <string name="item_specifics_text">Specifics</string>
    <string name="item_make_label">Make</string>
    <string name="item_model_label">Model</string>
    <string name="item_serial_number_label">Serial Number</string>
    <string name="camera_icon">Camera</string>

    <string name="item_extras_text">Extras</string>
    <string name="item_comments_label">Comments</string>
    <string name="item_tag_label">Add a tag</string>

    <string name="item_photos_text">Photos</string>

    <string name="item_edit_button_text">Edit Item</string>

    <string name="camera">c</string>
    <string name="gallery">g</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="choose">choose</string>
    <string name="loading">loading</string>

    <string-array name="type_choices">
        <item>Date</item>
        <item>Description</item>
        <item>Make</item>
        <item>Value</item>
        <item>Tag</item>
    </string-array>

    <string-array name="order_choices">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>

    <string-array name="filter_comp_choices">
        <item>Equals</item>
        <item>NotEquals</item>
        <item>Contains</item>
        <item>Between</item>
    </string-array>

    <string name="user_profile_created_text">Member since %1$s</string>
    <string name="input_required">This field is required.</string>
</resources>
