<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/DetailsText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:text="@string/item_details_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemEstimatedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_value_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemPurchaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_purchase_date_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/SpecificsText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:text="@string/item_specifics_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_make_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_model_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemSerialNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_serial_number_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/camera_icon"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ExtrasText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:text="@string/item_extras_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_comments_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ItemTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_tag_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/PhotosText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:text="@string/item_photos_text" />


    </LinearLayout>

</ScrollView>